--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+* {
+  padding: 0%;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  width: 100%;
+  height: 7vw;
+  
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background-color: #f7f7f7;
 }
-
-.App-link {
-  color: #61dafb;
+.logo {
+  width: 7vw;
+  height: 7vw;
+  border-radius: 15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-items > ul {
+  display: flex;
+  padding-top: 25px;
+  padding-right: 10px;
+}
+.nav-items > ul > li {
+  padding: 10px;
+  list-style-type: none;
+  font-size: 17px;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.res-card {
+  height: 20vw;
+  margin: 2.5vw;
+  width: 15vw;
+  border-radius: 5%;
+  background-color: rgb(254, 255, 245);
+}
+.res-big-card :hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.res-logo {
+  width: 100%;
+  height: 8vw;
+  border-radius: 5%;
+  object-fit: cover;
+}
+.res-info {
+  line-height: 2vw;
+  margin: 10px;
+}
+.res-card > h3 {
+  font-size: 10px;
 }
