--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,13 @@ body {
 .res-card > h3 {
   font-size: 10px;
 }
-.filter-btn{
+.filter{
   margin: 2vw;
   cursor: pointer;
+  display: flex;
+}
+.filter-btn{
+  margin-left: 2vw;
 }
 .shimmer-container{
   display: flex;
@@ -73,3 +77,7 @@ body {
   margin: 2.5vw;
   background-color: #e2e2e2;
 }
+.login {
+  cursor: pointer;
+  padding: 5px;
+} 
